--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,34 @@ body {
   color: #434455;
   background-color: #fff;
 }
+.container {
+  max-width: 1158px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+h1,
+h2,
+h3,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+ul {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+}
+header {
+  border-bottom: 1px solid #e7e9fc;
+  background: #fff;
+}
+.header .container {
+  display: flex;
+  padding: 0 15px;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -11,6 +39,11 @@ body {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
+  width: 115px;
+  height: 24px;
+  margin-right: 76px;
+  margin-top: 24px;
+  margin-bottom: 24px;
 }
 .logo-text {
   font-family: "Raleway", sans-serif;
@@ -21,7 +54,16 @@ body {
   text-transform: uppercase;
   color: #2e2f42;
 }
-
+.nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.ul-nav {
+  display: flex;
+  gap: 40px;
+  margin-right: 332px;
+}
 .nav-list {
   font-weight: 500;
   font-size: 16px;
@@ -32,6 +74,10 @@ body {
 .nav-list:hover,
 .nav-list:focus {
   color: #404bbf;
+}
+.ul-address {
+  display: flex;
+  gap: 40px;
 }
 
 .contacts {
@@ -53,6 +99,8 @@ body {
 }
 .hero {
   background: #2e2f42;
+  padding: 188px;
+  align-items: center;
 }
 .hero-text {
   font-weight: 700;
@@ -62,6 +110,9 @@ body {
   text-align: center;
   color: #fff;
   background: #2e2f42;
+  max-width: 496px;
+  margin: 0 auto;
+  margin-bottom: 48px;
 }
 .custom-button {
   font-family: "Roboto", sans-serif;
@@ -72,6 +123,10 @@ body {
   color: #fff;
   background: #4d5ae5;
   cursor: pointer;
+  display: block;
+  border-radius: 4px;
+  padding: 16px 32px;
+  margin: 0 auto;
 }
 .custom-button:hover,
 .custom-button:focus {
@@ -84,6 +139,14 @@ body {
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
+  visibility: hidden;
+}
+.features {
+  padding: 120px 0;
+}
+.ul-features {
+  display: flex;
+  gap: 24px;
 }
 .features-list {
   font-weight: 500;
@@ -91,6 +154,7 @@ body {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 .features-text {
   font-size: 16px;
@@ -100,6 +164,7 @@ body {
 }
 .team-section {
   background-color: #f4f4fd;
+  padding: 120px 120px 0;
 }
 .team-header {
   font-weight: 500;
@@ -109,9 +174,21 @@ body {
   text-align: center;
   text-transform: capitalize;
   color: #2e2f42;
+  margin-bottom: 72px;
+}
+.ul-team {
+  display: flex;
+  gap: 24px;
 }
 .team {
   background-color: #ffffff;
+  width: calc((100% - 72px) / 4);
+  border-radius: 0 0 4px 4px;
+  margin-bottom: 120px;
+}
+.team-desc {
+  padding: 32px 0;
+  text-align: center;
 }
 .team-list {
   font-weight: 500;
@@ -125,6 +202,11 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  padding: 8px 0;
+}
+.portfolio-section {
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 .portfolio-header {
   font-size: 36px;
@@ -134,6 +216,21 @@ body {
   text-align: center;
   color: #2e2f42;
   text-transform: capitalize;
+  margin-bottom: 72px;
+}
+.ul-portfolio {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 48px;
+}
+.portfolio-desc {
+  border-bottom: 1px solid #e7e9fc;
+  border-left: 1px solid #e7e9fc;
+  border-right: 1px solid #e7e9fc;
+}
+.portfolio-item {
+  width: calc((100% - 48px) / 3);
 }
 .portfolio-list {
   font-weight: 500;
@@ -141,15 +238,20 @@ body {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
+  padding-left: 16px;
 }
 .portfolio-text {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  margin-bottom: 32px;
+  padding-left: 16px;
 }
 .site-footer {
   background: #2e2f42;
+  padding: 100px 0;
 }
 .logo-footer {
   font-family: "Raleway", sans-serif;
@@ -159,6 +261,8 @@ body {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
+  display: inline-block;
+  margin-bottom: 16px;
 }
 .logo-text-footer {
   font-weight: 700;
@@ -173,4 +277,5 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
+  max-width: 264px;
 }
