--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,9 @@ body {
   color: #434455;
   background-color: #fff;
 }
+img {
+  display: block;
+}
 .container {
   max-width: 1158px;
   padding: 0 15px;
@@ -42,8 +45,8 @@ header {
   width: 115px;
   height: 24px;
   margin-right: 76px;
-  margin-top: 24px;
-  margin-bottom: 24px;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 .logo-text {
   font-family: "Raleway", sans-serif;
@@ -99,7 +102,7 @@ header {
 }
 .hero {
   background: #2e2f42;
-  padding: 188px;
+  padding: 188px 0;
   align-items: center;
 }
 .hero-text {
@@ -127,6 +130,9 @@ header {
   border-radius: 4px;
   padding: 16px 32px;
   margin: 0 auto;
+  min-width: 169px;
+  height: 56px;
+  border: none;
 }
 .custom-button:hover,
 .custom-button:focus {
@@ -141,12 +147,26 @@ header {
   color: #2e2f42;
   visibility: hidden;
 }
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  clip: rect(0, 0, 0, 0);
+  overflow: hidden;
+  white-space: nowrap;
+}
 .features {
   padding: 120px 0;
 }
 .ul-features {
   display: flex;
   gap: 24px;
+}
+.features-desc {
+  width: calc((100% - 72px) / 4);
 }
 .features-list {
   font-weight: 500;
@@ -164,7 +184,7 @@ header {
 }
 .team-section {
   background-color: #f4f4fd;
-  padding: 120px 120px 0;
+  padding: 120px 0;
 }
 .team-header {
   font-weight: 500;
@@ -196,6 +216,7 @@ header {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px 0;
 }
 .team-text {
   font-size: 16px;
@@ -228,6 +249,7 @@ header {
   border-bottom: 1px solid #e7e9fc;
   border-left: 1px solid #e7e9fc;
   border-right: 1px solid #e7e9fc;
+  padding: 32px 16px;
 }
 .portfolio-item {
   width: calc((100% - 48px) / 3);
@@ -246,7 +268,7 @@ header {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
-  margin-bottom: 32px;
+  padding-bottom: 32px;
   padding-left: 16px;
 }
 .site-footer {
