--- a/css/styles.css
+++ b/css/styles.css
@@ -209,7 +209,7 @@ header {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
-  margin-bottom: 8px 0;
+  margin-bottom: 8px;
 }
 .team-text {
   font-size: 16px;
