--- a/css/styles.css
+++ b/css/styles.css
@@ -157,6 +157,7 @@ header {
   clip: rect(0, 0, 0, 0);
   overflow: hidden;
   white-space: nowrap;
+  clip-path: inset(100%);
 }
 .features {
   padding: 120px 0;
